--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
