--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start":"npm run serve"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-html2pdf": "^1.8.0",
